# product_lm_comparator

./: .gitignore  AGENTS.md  Dockerfile  Dockerfile.frontend  README.md  docker-compose.yml  pyproject.toml  test.db  описание.txt
app/backend/: main.py
app/backend/endpoints/: categories.py  certificates.py  comparison.py  contacts.py  order_conditions.py  serializer.py  suppliers.py  user_notes.py
app/backend/services/: llm_client.py  url_parser.py
app/bakcend/endpoints/: categories.py  certificates.py  comparison.py  contacts.py  order_conditions.py  suppliers.py  user_notes.py
app/db/: data.json  db_config.py  models.py  seed_data.py
app/db/crud/: __init__.py  categories.py  certificates.py  contacts.py  order_conditions.py  suppliers.py  user_notes.py  utils.py
app/frontend/: llm_common.py  llm_service.py  main.py  styles.py
app/frontend/api_requests/: __init__.py  categories.py  compare.py  suppliers.py
app/schemas/: __init__.py  category.py  certificate.py  comparison.py  contact.py  location.py  order_condition.py  supplier.py  user_note.py
app/tests/: conftest.py  test_categories.py  test_certificates.py  test_contacts.py  test_order_conditions.py  test_suppliers.py
