[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "product_lm_comparator"
version = "0.1.0"
description = "Поиск и сравнение поставщиков продуктов питания с LLM-ассистентом"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.138",
    "uvicorn[standard]>=0.49",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "pydantic>=2.13",
    "pydantic-settings>=2.14",
    "streamlit>=1.58",
    "requests>=2.34",
    "httpx>=0.28",
    "beautifulsoup4>=4.15",
    "python-dotenv>=1.2",
    "python-multipart>=0.0.32",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.1",
    "httpx>=0.28",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["app/tests"]
